// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextualBadge component rendering it should render according to theme: ContextualBadge Custom Theme 1`] = `
<div
  className="sc-bdVaJa fCrzmS"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 1`] = `
<div
  className="sc-bdVaJa fCrzmS"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 2`] = `
<div
  className="sc-bdVaJa bABwuK"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 3`] = `
<div
  className="sc-bdVaJa idCWQL"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 4`] = `
<div
  className="sc-bdVaJa htUQav"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 5`] = `
<div
  className="sc-bdVaJa eXtZkd"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 6`] = `
<div
  className="sc-bdVaJa kPVSd"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 7`] = `
<div
  className="sc-bdVaJa fStXwo"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 8`] = `
<div
  className="sc-bdVaJa bYYsMi"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;

exports[`ContextualBadge component rendering it should render each type: ContextualBadge Types 1`] = `
<div
  className="sc-bdVaJa fCrzmS"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;

exports[`ContextualBadge component rendering it should render the default color and default type: ContextualBadge Default Color And Type 1`] = `
<div
  className="sc-bdVaJa fCrzmS"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;
